# mc-top-list

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt  setup.py  sources.md
.github/workflows/: scraper.yml
data/aggregated/: latest
data/raw/: latest
docs/adr/: 0000-adr-writing-convention.md  0001-use-python-for-scraper.md  0002-store-data-as-static-json.md  0003-use-react-for-frontend.md  0004-aggregation-and-reference-strategy.md  0005-github-actions-for-ci-cd.md  0006-data-scraping-policy.md  0007-api-first-data-collection-strategy.md  0008-async-logging-implementation.md  0009-simplified-resource-model.md  0010-code-refactoring-principles.md  0011-scraper-code-organization.md  0012-resource-type-expansion.md  0013-codebase-restructuring.md  0014-testing-and-quality-assurance.md  0015-data-aggregation-and-storage.md  0016-frontend-table-design.md  0017-platform-adapter-pattern.md  0018-resource-type-modification-guide.md  0019-new-data-structure.md  0020-content-creator-insights.md  0020-data-analysis-strategy.md  0021-data-analysis-strategy.md  0021-insights-and-search-integration.md  0022-insights-and-search-integration.md  0023-resource-growth-tracking.md  0024-implement-resource-growth-tracking.md
docs/schemas/: plugin_mod.schema.json
insights/: __init__.py  __main__.py
insights/services/: generator.py  resource_matcher.py  weekly_insights.py
insights/templates/: base.html.j2  weekly_report.html.j2
public/: index.html  search.html
public/css/: common.css
public/js/: common.js
scraper/: __init__.py  config.py  config.yml  requirements-dev.txt  requirements.txt  run_scraper.py  run_tests.py  scraper.py
scraper/api_clients/: __init__.py  modrinth.py
scraper/clients/: client_factory.py  hangar.py  modrinth.py  polymart.py
scraper/contracts/: api_client.py  transformer.py
scraper/core/: resource_aggregator.py  resource_fetcher.py  resource_normalizer.py
scraper/interfaces/: api_client.py
scraper/models/: __init__.py  platform.py  resource.py
tests/: conftest.py
(+23 files in other folders)
